test/tests/stages/14_pointers/valid/declarators/abstract_declarators.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[8]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    ULong: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Pointer: 
                      ULong: 
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Pointer: 
                      ULong: 
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: y
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Pointer: 
                      Pointer: 
                        Double: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: y
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Pointer: 
                      Pointer: 
                        Pointer: 
                          Double: 
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: y
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Pointer: 
                      Pointer: 
                        Pointer: 
                          Double: 
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 4
                    None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Pointer: 
                      Pointer: 
                        Pointer: 
                          Double: 
                    None: 
                  CVar: 
                    TIdentifier: y
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 5
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
